couleur bleu sur branche aqua

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <style>
         table,th,td {
             border: 1px solid black;
+            background-color: aqua;
         }
     </style>
     </head>
@@ -37,6 +38,11 @@
     <tr>
         <th>Emmanuel</th>
         <th>Alphonsine</th>
+        <th>20</th>
+    </tr>
+    <tr>
+        <th>Emma</th>
+        <th>Bovary</th>
         <th>20</th>
     </tr>
 </table>
